--- a/paper/references.bib
+++ b/paper/references.bib
@@ -18527,4 +18527,23 @@ pages = {352--362}
 	url = {https://www.jstatsoft.org/v45/i03/},
 }
 
+@article{spreen2013handleiding,
+	title={Handleiding HKT-R},
+	author={Spreen, M and Brand, E and Ter Horst, P and Bogaerts, S},
+	journal={Historische Klinische Toekomst--Revisie},
+	year={2013}
+}
+
+@article{vess2001development,
+	title={Development and implementation of a functional skills measure for forensic psychiatric inpatients},
+	author={Vess, James},
+	journal={The Journal of Forensic Psychiatry},
+	volume={12},
+	number={3},
+	pages={592--609},
+	year={2001},
+	publisher={Taylor \& Francis}
+}
+
+
 @Comment{jabref-meta: databaseType:bibtex;}
