--- a/paper/mycommands.tex
+++ b/paper/mycommands.tex
@@ -2,7 +2,7 @@
 \newcommand{\Irater}{r}
 \newcommand{\Iitem}{i}
 \newcommand{\Ipatient}{p}
-%\newcommand{\Incat}{c}
+\newcommand{\Incat}{c}
 %\newcommand{\Ilatent}{l}
 %\newcommand{\IdiscreteP}{d}
 \newcommand{\Icovariate}{c}
@@ -10,7 +10,7 @@
 \newcommand{\Trater}{\expandafter\MakeUppercase\expandafter{\Irater}}
 \newcommand{\Titem}{\expandafter\MakeUppercase\expandafter{\Iitem}}
 \newcommand{\Tpatient}{\expandafter\MakeUppercase\expandafter{\Ipatient}}
-%\newcommand{\Tncat}{\expandafter\MakeUppercase\expandafter{\Incat}}
+\newcommand{\Tncat}{\expandafter\MakeUppercase\expandafter{\Incat}}
 %\newcommand{\Tlatent}{\expandafter\MakeUppercase\expandafter{\Ilatent}}
 %\newcommand{\TdiscreteP}{\expandafter\MakeUppercase\expandafter{\IdiscreteP}}
 \newcommand{\Tcovariate}{\expandafter\MakeUppercase\expandafter{\Icovariate}}
@@ -18,7 +18,7 @@
 % definitions of variables
 \newcommand{\ItemTruth}{\theta}
 \newcommand{\ItemDifficulty}{\kappa}
-\newcommand{\UnBiasedThreshold}{\gamma}
+\newcommand{\UnbiasedThreshold}{\gamma}
 \newcommand{\Threshold}{\delta}
 \newcommand{\RaterScale}{\alpha}
 \newcommand{\RaterShift}{\beta}
@@ -32,7 +32,7 @@
 \newcommand{\Covariate}{z}
 
 \newcommand{\CovariateBeta}{\delta}
-\newcommand{\ItemCovariateBeta}{\gamma}
+\newcommand{\ItemCovariateBeta}{\eta}
 
 
 % Probability distributions
