--- a/paper/mycommands.tex
+++ b/paper/mycommands.tex
@@ -5,7 +5,7 @@
 \newcommand{\Incat}{c}
 %\newcommand{\Ilatent}{l}
 %\newcommand{\IdiscreteP}{d}
-\newcommand{\Icovariate}{c}
+\newcommand{\Icovariate}{d}
 
 \newcommand{\Trater}{\expandafter\MakeUppercase\expandafter{\Irater}}
 \newcommand{\Titem}{\expandafter\MakeUppercase\expandafter{\Iitem}}
@@ -19,7 +19,8 @@
 \newcommand{\ItemTruth}{\theta}
 \newcommand{\ItemDifficulty}{\kappa}
 \newcommand{\UnbiasedThreshold}{\gamma}
-\newcommand{\Threshold}{\delta}
+%\newcommand{\Threshold}{\delta}
+\newcommand{\Threshold}{\tau}
 \newcommand{\RaterScale}{\alpha}
 \newcommand{\RaterShift}{\beta}
 \newcommand{\RaterCompetence}{\zeta}
@@ -31,14 +32,21 @@
 %\newcommand{\PatientCovariate}{w}
 \newcommand{\Covariate}{z}
 
-\newcommand{\CovariateBeta}{\delta}
-\newcommand{\ItemCovariateBeta}{\eta}
+\newcommand{\CovariateBeta}{\eta}
+%\newcommand{\ItemCovariateBeta}{\eta}
+
+\newcommand{\oneScore}{x_{\Ipatient\Iitem\Irater}}
+\newcommand{\oneAppraisal}{\Appraisal_{\Ipatient\Iitem\Irater}}
+
 
 
 % Probability distributions
 
+\newcommand{\cdf}[1]{F\left(#1\right)}
+
 %\newcommand{\ilogit}[1]{\text{logit}^{-1}\left(#1\right)}
-\newcommand{\ilogit}[1]{\begin{revision}F\end{revision}\left(#1\right)}
+%\newcommand{\ilogit}[1]{\begin{revision}F\end{revision}\left(#1\right)}
+\newcommand{\ilogit}[1]{F\left(#1\right)}
 \newcommand{\logit}[1]{\text{logit}\left(#1\right)}
 \newcommand{\dnorm}[2]{\text{Normal}\left(#1,\,#2\right)}
 \newcommand{\dnormp}[2]{\text{Normal\textsuperscript{+}}\left(#1,\,#2\right)}
