--- a/graphicalmodels/graphicalmodels.tex
+++ b/graphicalmodels/graphicalmodels.tex
@@ -23,7 +23,7 @@
 
 \iffalse
 \begin{tikzpicture}[square/.style={regular polygon,regular polygon sides=4}]
-%\draw [help lines] (-3,-5) grid (3,5);			
+%\draw [help lines] (-3,-5) grid (3,5);
 
 % Define nodes
 \node[obsD, double distance=1pt]                        (x) {$x_{\Irater\Iitem}$};
@@ -60,7 +60,7 @@
 \end{tikzpicture}
 
 \begin{tikzpicture}[square/.style={regular polygon,regular polygon sides=4}]
-%\draw [help lines] (-3,-5) grid (3,5);			
+%\draw [help lines] (-3,-5) grid (3,5);
 
 % Define nodes
 \node[obsD, double distance=1pt]                         (x) {$x_{\Irater\Iitem\Ipatient}$};
@@ -101,7 +101,7 @@
 
 
 \begin{tikzpicture}[square/.style={regular polygon,regular polygon sides=4}]
-%\draw [help lines] (-3,-5) grid (3,5);			
+%\draw [help lines] (-3,-5) grid (3,5);
 
 % Define nodes
 \node[obsD, double distance=1pt]                         (x) {$x_{\Irater\Iitem\Ipatient}$};
@@ -151,7 +151,7 @@
 \end{tikzpicture}
 
 \begin{tikzpicture}[square/.style={regular polygon,regular polygon sides=4}]
-%\draw [help lines] (-3,-5) grid (3,5);			
+%\draw [help lines] (-3,-5) grid (3,5);
 
 % Define nodes
 \node[obsD, double distance=1pt]                         (x) {$x_{\Irater\Iitem\Ipatient}$};
@@ -201,7 +201,7 @@
 \end{tikzpicture}
 
 \begin{tikzpicture}[square/.style={regular polygon,regular polygon sides=4}]
-%\draw [help lines] (-3,-5) grid (3,5);			
+%\draw [help lines] (-3,-5) grid (3,5);
 
 % Define nodes
 \node[obsD, double distance=1pt]                         (x) {$x_{\Irater\Iitem\Ipatient}$};
@@ -252,7 +252,7 @@
 
 
 \begin{tikzpicture}[square/.style={regular polygon,regular polygon sides=4}]
-%\draw [help lines] (-3,-5) grid (3,5);			
+%\draw [help lines] (-3,-5) grid (3,5);
 
 \node[latent]      			(d) {$\Threshold_{\Irater\Incat}$};
 \node[latent, left  = of d] (a) {$\RaterScale_\Irater$};
@@ -270,7 +270,7 @@
 
 
 \begin{tikzpicture}[square/.style={regular polygon,regular polygon sides=4}]
-%\draw [help lines] (-3,-5) grid (3,5);			
+%\draw [help lines] (-3,-5) grid (3,5);
 
 % Define nodes
 \node[obsD, double distance=1pt]                        (x) {$x_{\Irater\Iitem}$};
@@ -304,7 +304,7 @@
 \end{tikzpicture}
 
 \begin{tikzpicture}[square/.style={regular polygon,regular polygon sides=4}]
-%\draw [help lines] (-3,-5) grid (3,5);			
+%\draw [help lines] (-3,-5) grid (3,5);
 
 % Define nodes
 \node[obsD, double distance=1pt]                         (x) {$x_{\Irater\Iitem\Ipatient}$};
@@ -352,7 +352,7 @@
 \end{tikzpicture}
 
 \begin{tikzpicture}[square/.style={regular polygon,regular polygon sides=4}]
-%\draw [help lines] (-3,-5) grid (3,5);			
+%\draw [help lines] (-3,-5) grid (3,5);
 
 \node[latent]                              (t1)  {$\ItemTruth_{1\Ipatient}$};
 \node[latent, right = of t1]               (t2)  {$\ItemTruth_{2\Ipatient}$};
@@ -370,7 +370,7 @@
 \end{tikzpicture}
 
 \begin{tikzpicture}[square/.style={regular polygon,regular polygon sides=4}]
-%\draw [help lines] (-3,-5) grid (3,5);			
+%\draw [help lines] (-3,-5) grid (3,5);
 
 % Define nodes
 \node[obsD, double distance=1pt]                        (x) 	{$x_{\Irater\Iitem\Ipatient}$};
@@ -423,7 +423,7 @@
 
 \fi
 \begin{tikzpicture}[square/.style={regular polygon,regular polygon sides=4}]
-%\draw [help lines] (-3,-5) grid (3,5);			
+%\draw [help lines] (-3,-5) grid (3,5);
 
 % Define nodes
 \node[obsD, double distance=1pt]                         (x) 	{$x_{\Iitem\Irater}$};
@@ -453,7 +453,7 @@
 \end{tikzpicture}
 
 \begin{tikzpicture}[square/.style={regular polygon,regular polygon sides=4}]
-%\draw [help lines] (-3,-5) grid (3,5);			
+%\draw [help lines] (-3,-5) grid (3,5);
 
 % Define nodes
 \node[obsD, double distance=1pt]                         (x) 	{$x_{\Ipatient\Iitem\Irater}$};
@@ -486,7 +486,7 @@
 \end{tikzpicture}
 
 \begin{tikzpicture}[square/.style={regular polygon,regular polygon sides=4}]
-%\draw [help lines] (-3,-5) grid (3,5);			
+%\draw [help lines] (-3,-5) grid (3,5);
 
 % Define nodes
 \node[obsD, double distance=1pt]                         (x) 	{$x_{\Ipatient\Iitem\Irater}$};
@@ -521,7 +521,7 @@
 \end{tikzpicture}
 
 \begin{tikzpicture}[square/.style={regular polygon,regular polygon sides=4}]
-%\draw [help lines] (-3,-5) grid (3,5);			
+%\draw [help lines] (-3,-5) grid (3,5);
 
 % Define nodes
 \node[obsD, double distance=1pt]                         (x) 	{$x_{\Ipatient\Iitem\Irater}$};
@@ -574,7 +574,7 @@
 \end{tikzpicture}
 
 \begin{tikzpicture}[square/.style={regular polygon,regular polygon sides=4}]
-%\draw [help lines] (-3,-5) grid (3,5);			
+%\draw [help lines] (-3,-5) grid (3,5);
 
 % Define nodes
 \node[obsD, double distance=1pt]						(x) 	{$x_{\Ipatient\Iitem\Irater}$};
@@ -627,7 +627,7 @@
 \end{tikzpicture}
 
 \begin{tikzpicture}[square/.style={regular polygon,regular polygon sides=4}]
-%\draw [help lines] (-3,-5) grid (3,5);			
+%\draw [help lines] (-3,-5) grid (3,5);
 
 % Define nodes
 \node[obsD, double distance=1pt]						(x) 	{$x_{\Ipatient\Iitem\Irater}$};
@@ -690,7 +690,7 @@
 \end{tikzpicture}
 
 \begin{tikzpicture}[square/.style={regular polygon,regular polygon sides=4}]
-%\draw [help lines] (-3,-5) grid (3,5);			
+%\draw [help lines] (-3,-5) grid (3,5);
 
 % Define nodes
 \node[obsD, double distance=1pt]						(x) 	{$x_{\Ipatient\Iitem\Irater}$};
@@ -750,7 +750,7 @@
 \end{tikzpicture}
 
 \begin{tikzpicture}[square/.style={regular polygon,regular polygon sides=4}]
-%\draw [help lines] (-3,-5) grid (3,5);			
+%\draw [help lines] (-3,-5) grid (3,5);
 
 % Define nodes
 \node[obsD, double distance=1pt]						(x) 	{$x_{\Ipatient\Iitem\Irater}$};
@@ -810,6 +810,72 @@
 }
 
 \end{tikzpicture}
+
+\begin{tikzpicture}[square/.style={regular polygon,regular polygon sides=4}]
+%\draw [help lines] (-3,-5) grid (3,5);
+
+% Define nodes
+\node[obsD, double distance=1pt]						(x) 	{$x_{\Ipatient\Iitem\Irater\Itime}$};
+
+\node[latent, left = of x]	                           (mu) 	{$\Threshold_{\Irater\Incat}$};
+
+\node[latent, above = of x,                        ]	(sig) 	{$\Appraisal_{\Ipatient\Iitem\Irater\Itime}$};
+
+\node[latent, right = of sig,                      ]      (l) 	{$\ItemTruth_{\Ipatient\Iitem\Itime}$};
+\node[latent, left = of sig,                       ]      (E) 	{$\RaterCompetence_{\Irater}$};
+
+
+\node[latent, above = of sig, yshift=-.4cm				]	(lam) 	{$\ItemDifficulty_{\Iitem}$};
+
+
+\node[obsD, right = of l, minimum width = 1cm]	                (y)	        {$v_{\Ipatient}$};
+\node[obsD, below = of y, minimum width = 1cm]	(zp)		{$\Covariate_{\Ipatient}$};
+
+\node[obsD, left = of E, minimum width = 1cm, xshift = .4cm]	(zr)		{$\Covariate_{\Irater}$};
+%\node[obsD, left = of E, double distance = 1pt, minimum width = 1cm] at ($(E)!0.5!(b)$)	(zr)		{$z_{\Irater}$};
+
+%\node[latent, left = of E] at ($(E)!0.5!(b)$) (test)	{test};
+
+%\node[latent, above = of l,  yshift=-.4cm         ]     (g) 	{$\CovariateBeta_{\Iitem}$};
+\node[latent, right = of lam         ]     (g) 	{$\CovariateBeta_{\Iitem}$};
+\node[latent, right = of zp, xshift = -.4cm       ]     (h)  	{$\CovariateBeta_{\Icovariate}$};
+
+% invisible helper nodes to make the plates not overlap
+\node[latent, above= of x, xshift = -.3cm, draw=none, fill=none]    (ihelp1) 	{};
+\node[latent, yshift = .3cm, draw=none, fill=none] at (E)   (rhelp1) 	{};
+%\node[latent, yshift = 0cm, draw=none] at (l)   (phelp1) 	{};
+
+% Edges
+\edge {mu, sig}     {x};%
+%\edge {a, b}		{mu};%
+\edge {l, E, lam}   {sig};%
+
+\edge {mu, sig}     {x};%
+
+\edge {l, zp, g, h} {y};%
+\edge {zr}     	    {E, mu};%
+
+{\tikzset{plate caption/.append style={below=0pt of #1.south east, xshift = -.4cm, yshift = -.4cm}}
+	\plate[text centered] {ni} {(x)(l)(y)(sig)}            {$\Tpatient$ patients };
+}
+{\tikzset{plate caption/.append style={below=0pt of #1.north, xshift = 1.1cm, yshift = 0.4cm}}
+	\plate[text centered] {ni} {(x)(sig)(l)(lam)(ihelp1)}            {$\Titem$ items  };
+}
+{\tikzset{plate caption/.append style={below=0pt of #1.south west, xshift = .6cm, yshift = -.5cm}}
+	\plate[text centered] {ni} {(x)(mu)(sig)(E)(zr)(rhelp1)}            {$\Trater$ raters};
+}
+{\tikzset{plate caption/.append style={below=0pt of #1.north east, yshift = -.9cm}}
+	\plate[align=right] {ni} {(zp)(h)}            {$\Icovariate$ Covariates};
+}
+{\tikzset{plate caption/.append style={below=4pt of #1.south east, xshift = -.6cm}}
+	\plate[text centered] {nc} {(mu)}              {$\Tncat$ categories};
+}
+{\tikzset{plate caption/.append style={below=4pt of #1.south east, xshift = -.4cm, yshift=-.1cm}}
+	\plate[text centered] {nc} {(x)(sig)(l)}              {$\Ttime$ Timepoints};
+}
+
+\end{tikzpicture}
+
 
 \end{document}
 
