--- a/paper/mycommands.tex
+++ b/paper/mycommands.tex
@@ -6,6 +6,7 @@
 %\newcommand{\Ilatent}{l}
 %\newcommand{\IdiscreteP}{d}
 \newcommand{\Icovariate}{d}
+\newcommand{\Itime}{t}
 
 \newcommand{\Trater}{\expandafter\MakeUppercase\expandafter{\Irater}}
 \newcommand{\Titem}{\expandafter\MakeUppercase\expandafter{\Iitem}}
@@ -14,6 +15,7 @@
 %\newcommand{\Tlatent}{\expandafter\MakeUppercase\expandafter{\Ilatent}}
 %\newcommand{\TdiscreteP}{\expandafter\MakeUppercase\expandafter{\IdiscreteP}}
 \newcommand{\Tcovariate}{\expandafter\MakeUppercase\expandafter{\Icovariate}}
+\newcommand{\Ttime}{\expandafter\MakeUppercase\expandafter{\Itime}}
 
 % definitions of variables
 \newcommand{\ItemTruth}{\theta}
